# itdc

./: .gitignore  CMakeLists.txt  Makefile  test.c  test.cpp
itdcmm/: PT.cpp
itdcmm/include/: PT.h
lib/: PT.cpp  fs.c  fs.go  get.go  go.mod  go.sum  itdc.go  set.go  settings.c
lib/include/: PT.h  Settings.h
swig/: PT.i  test.py
